[package]
name = "blackhole"
version = "0.1.0"
edition = "2021"
default-run = "blackhole"

[lib]
name = "blackhole"
path = "src/lib.rs"

[[bin]]
name = "blackhole"
path = "src/main.rs"

[[bin]]
name = "verify"
path = "src/bin/verify.rs"

[dependencies]
glow = { version = "0.13", optional = true }
winit = { version = "0.29", optional = true }
glutin = { version = "0.31", optional = true }
glutin-winit = { version = "0.4", optional = true }
raw-window-handle = { version = "0.5", optional = true }

[features]
default = []
render = ["dep:glow", "dep:winit", "dep:glutin", "dep:glutin-winit", "dep:raw-window-handle"]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
